--- a/order-srv/package.json
+++ b/order-srv/package.json
@@ -15,12 +15,14 @@
     "@types/amqplib": "^0.10.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "amqplib": "^0.10.4",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1"
   }
 }
